src/test/deca/context/valid/inst_string.deca
// Description :
// test d'une chaîne de caractères
//
// Résultats :
// ok

{
  "Hello";
}
